# playwright-py

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml
helpers/: __init__.py  invoice_file_factory.py
models/: __init__.py
pages/: create_invoice_page.py  edit_invoice_page.py  home_page.py  login_page.py
utils/: config.py  excel_factory.py
