[project]
name = "playwright-py"
version = "0.1.1"
description = "Automated tests with python and pom."
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "faker>=40.1.0",
    "openpyxl>=3.1.5",
    "pytest-playwright>=0.7.2",
    "python-dotenv>=1.2.1",
]

[dependency-groups]
dev = [
    "mypy>=1.19.1",
    "ruff>=0.14.10",
    "types-openpyxl>=3.1.5.20250919",
]

[tool.mypy]
python_version = "3.14"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
ignore_missing_imports = true
check_untyped_defs = true

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false

[tool.ruff]
target-version = "py314"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
ignore = []
fixable = ["ALL"]
unfixable = []

[tool.ruff.format]
quote-style = "double"
indent-style = "tab"
skip-magic-trailing-comma = false
line-ending = "lf"

[tool.ruff.lint.isort]
combine-as-imports = true
